@@ -118,10 +118,7 @@ DECL|macro|QT_NO_STANDARDITEMMODEL
 DECL|macro|QT_NO_STATUSBAR
 DECL|macro|QT_NO_STATUSTIP
 DECL|macro|QT_NO_STRINGLISTMODEL
-DECL|macro|QT_NO_STYLE_CDE
-DECL|macro|QT_NO_STYLE_CLEANLOOKS
-DECL|macro|QT_NO_STYLE_MOTIF
-DECL|macro|QT_NO_STYLE_PLASTIQUE
+DECL|macro|QT_NO_STYLE_FUSION
 DECL|macro|QT_NO_STYLE_STYLESHEET
 DECL|macro|QT_NO_STYLE_WINDOWSCE
 DECL|macro|QT_NO_STYLE_WINDOWSMOBILE
