@@ -58,12 +58,9 @@ DECL|macro|QT_NO_SPLITTER
 DECL|macro|QT_NO_STACKEDWIDGET
 DECL|macro|QT_NO_STATUSBAR
 DECL|macro|QT_NO_STRINGLISTMODEL
-DECL|macro|QT_NO_STYLE_CDE
-DECL|macro|QT_NO_STYLE_CLEANLOOKS
-DECL|macro|QT_NO_STYLE_MOTIF
-DECL|macro|QT_NO_STYLE_PLASTIQUE
+DECL|macro|QT_NO_STYLE_FUSION
 DECL|macro|QT_NO_STYLE_STYLESHEET
-DECL|macro|QT_NO_STYLE_WINDOWSXP
+DECL|macro|QT_NO_STYLE_WINDOWSVISTA
 DECL|macro|QT_NO_SYSTEMTRAYICON
 DECL|macro|QT_NO_TABBAR
 DECL|macro|QT_NO_TABDIALOG
