@@ -58,8 +58,6 @@ DECL|macro|QT_NO_SPLITTER
 DECL|macro|QT_NO_STANDARDITEMMODEL
 DECL|macro|QT_NO_STATEMACHINE
 DECL|macro|QT_NO_STRINGLISTMODEL
-DECL|macro|QT_NO_STYLE_CLEANLOOKS
-DECL|macro|QT_NO_STYLE_PLASTIQUE
 DECL|macro|QT_NO_STYLE_STYLESHEET
 DECL|macro|QT_NO_STYLE_WINDOWSCE
 DECL|macro|QT_NO_STYLE_WINDOWSMOBILE
