@@ -1,57 +1,0 @@
-DECL|enumerator|BottomUp
-DECL|enumerator|FromLeft
-DECL|enumerator|FromRight
-DECL|enumerator|TopDown
-DECL|enum|Direction
-DECL|function|QCleanlooksStyle
-DECL|function|QCleanlooksStyle
-DECL|function|drawComplexControl
-DECL|function|drawControl
-DECL|function|drawItemPixmap
-DECL|function|drawItemText
-DECL|function|drawPrimitive
-DECL|function|generatedIconPixmap
-DECL|function|hitTestComplexControl
-DECL|function|itemPixmapRect
-DECL|function|mergedColors
-DECL|function|pixelMetric
-DECL|function|polish
-DECL|function|polish
-DECL|function|polish
-DECL|function|qt_cleanlooks_draw_buttongradient
-DECL|function|qt_cleanlooks_draw_gradient
-DECL|function|qt_cleanlooks_draw_mdibutton
-DECL|function|sizeFromContents
-DECL|function|standardIcon
-DECL|function|standardPalette
-DECL|function|standardPixmap
-DECL|function|styleHint
-DECL|function|subControlRect
-DECL|function|subElementRect
-DECL|function|unpolish
-DECL|function|unpolish
-DECL|function|~QCleanlooksStyle
-DECL|variable|dock_widget_close_xpm
-DECL|variable|dock_widget_restore_xpm
-DECL|variable|qt_cleanlooks_arrow_down_xpm
-DECL|variable|qt_cleanlooks_arrow_up_xpm
-DECL|variable|qt_cleanlooks_checkbox_checked
-DECL|variable|qt_cleanlooks_menuitem_checkbox_checked
-DECL|variable|qt_cleanlooks_radiobutton
-DECL|variable|qt_cleanlooks_radiobutton_checked
-DECL|variable|qt_scrollbar_button_arrow_down
-DECL|variable|qt_scrollbar_button_arrow_left
-DECL|variable|qt_scrollbar_button_arrow_right
-DECL|variable|qt_scrollbar_button_arrow_up
-DECL|variable|qt_scrollbar_button_down
-DECL|variable|qt_scrollbar_button_left
-DECL|variable|qt_scrollbar_button_right
-DECL|variable|qt_scrollbar_button_up
-DECL|variable|qt_spinbox_button_arrow_down
-DECL|variable|qt_spinbox_button_arrow_up
-DECL|variable|qt_titlebar_context_help
-DECL|variable|windowsItemFrame
-DECL|variable|windowsItemHMargin
-DECL|variable|windowsItemVMargin
-DECL|variable|windowsRightBorder
-DECL|variable|workspace_minimize
