@@ -1,2 +1,0 @@
-DECL|macro|QCLEANLOOKSSTYLE_H
-DECL|variable|QCleanlooksStylePrivate
