@@ -1,1 +1,0 @@
-DECL|macro|QCLEANLOOKSSTYLE_P_H
