@@ -1,69 +1,0 @@
-DECL|class|QPlastiqueStylePrivate
-DECL|function|QPlastiqueStyle
-DECL|function|QPlastiqueStylePrivate
-DECL|function|drawComplexControl
-DECL|function|drawControl
-DECL|function|drawPartialFrame
-DECL|function|drawPrimitive
-DECL|function|elliditide
-DECL|function|eventFilter
-DECL|function|hitTestComplexControl
-DECL|function|layoutSpacing
-DECL|function|mergedColors
-DECL|function|pixelMetric
-DECL|function|polish
-DECL|function|polish
-DECL|function|polish
-DECL|function|qBrushDark
-DECL|function|qBrushLight
-DECL|function|qBrushSetAlphaF
-DECL|function|qMapBrushToRect
-DECL|function|qMapGradientToRect
-DECL|function|qt_plastique_drawFrame
-DECL|function|qt_plastique_drawShadedPanel
-DECL|function|qt_plastique_draw_frame
-DECL|function|qt_plastique_draw_gradient
-DECL|function|qt_plastique_draw_handle
-DECL|function|qt_plastique_draw_mdibutton
-DECL|function|sizeFromContents
-DECL|function|standardIcon
-DECL|function|standardPalette
-DECL|function|standardPixmap
-DECL|function|styleHint
-DECL|function|subControlRect
-DECL|function|subElementRect
-DECL|function|unpolish
-DECL|function|unpolish
-DECL|function|~QPlastiqueStyle
-DECL|function|~QPlastiqueStylePrivate
-DECL|macro|CT1
-DECL|macro|CT2
-DECL|variable|AnimateBusyProgressBar
-DECL|variable|AnimateProgressBar
-DECL|variable|ProgressBarFps
-DECL|variable|blueFrameWidth
-DECL|variable|qt_plastique_slider_horizontalhandle
-DECL|variable|qt_plastique_slider_horizontalhandle_up
-DECL|variable|qt_plastique_slider_verticalhandle
-DECL|variable|qt_plastique_slider_verticalhandle_left
-DECL|variable|qt_scrollbar_button_arrow_down
-DECL|variable|qt_scrollbar_button_arrow_left
-DECL|variable|qt_scrollbar_button_arrow_right
-DECL|variable|qt_scrollbar_button_arrow_up
-DECL|variable|qt_scrollbar_button_down
-DECL|variable|qt_scrollbar_button_left
-DECL|variable|qt_scrollbar_button_right
-DECL|variable|qt_scrollbar_button_up
-DECL|variable|qt_scrollbar_slider_pattern_horizontal
-DECL|variable|qt_scrollbar_slider_pattern_vertical
-DECL|variable|qt_simple_toolbarhandle
-DECL|variable|qt_titlebar_context_help
-DECL|variable|qt_toolbarhandle
-DECL|variable|windowsArrowHMargin
-DECL|variable|windowsCheckMarkWidth
-DECL|variable|windowsItemFrame
-DECL|variable|windowsItemHMargin
-DECL|variable|windowsItemVMargin
-DECL|variable|windowsRightBorder
-DECL|variable|windowsSepHeight
-DECL|variable|windowsTabSpacing
